# alsec

./: README.md  pyproject.toml
src/: alas.py
src/alas/: __init__.py  __main__.py  alas.py  config.toml
tests/: tests.py
